--- a/pom.xml
+++ b/pom.xml
@@ -14,25 +14,8 @@
         <cucumber.filter></cucumber.filter>
         <cucumber.options>src/test/resources/features --glue org/backbase ${cucumber.filter} -t 'not @Bug' -p 'html:target/cucumber-reports/cucumber.html' -p 'json:target/cucumber-reports/cucumber.json' -p 'pretty'</cucumber.options>
         <base.url>https://computer-database.herokuapp.com/</base.url>
+        <browser>chrome</browser>
     </properties>
-
-    <profiles>
-        <profile>
-            <id>chrome</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <platform>CHROME</platform>
-            </properties>
-        </profile>
-        <profile>
-            <id>firefox</id>
-            <properties>
-                <platform>FIREFOX</platform>
-            </properties>
-        </profile>
-    </profiles>
 
     <dependencies>
         <!-- Selenium -->
