--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,22 @@
         <selenium.version>3.141.59</selenium.version>
         <cucumber.version>4.8.1</cucumber.version>
         <cucumber.filter></cucumber.filter>
-        <cucumber.options>src/test/resources/features --glue org/backbase ${cucumber.filter} -t 'not @Bug' -p 'html:target/cucumber-reports/cucumber.html' -p 'json:target/cucumber-reports/cucumber.json' -p 'pretty'</cucumber.options>
+        <cucumber.options/>
         <base.url>https://computer-database.herokuapp.com/</base.url>
         <browser>chrome</browser>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>runner</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <cucumber.options>src/test/resources/features --glue org/backbase ${cucumber.filter} -t 'not @Bug' -p 'html:target/cucumber-reports/cucumber.html' -p 'json:target/cucumber-reports/cucumber.json' -p 'pretty'</cucumber.options>
+            </properties>
+        </profile>
+    </profiles>
     <dependencies>
         <!-- Selenium -->
         <dependency>
